# mlops

./: README.md
k8s_poetry/: Dockerfile  main.py  pyproject.toml  readme.md
k8s_poetry/devops/: deployment.yaml  ingress.yaml  service.yaml
